CSS fixed. Long titles on metadata pages overlapped. Fixed now

--- a/trunk/gbif-ipt/src/main/webapp/styles/main.css
+++ b/trunk/gbif-ipt/src/main/webapp/styles/main.css
@@ -14,6 +14,7 @@ body {
 h1 {
 	color: #077A2D;
 	font-size: 20px;
+	line-height: 1.2em
 }
 a {
 	color: #005418;
